syntax = "proto3";

option go_package = "src/common/models";

package quiz;

service Quiz {
    rpc GetQuizQuestions (QuestionRequest) returns (QuestionResponse) {}
    rpc AnswerQuiz(AnswerRequest) returns (AnswerResponse) {}
    rpc GetUserScore(UserScoreRequest) returns (UserScoreResponse) {}
}

message KeyValue {
    string id = 1;
    string value = 2;
}

message QuizQuestion {
    KeyValue question = 1;

    repeated KeyValue choices = 2;
}

message QuestionRequest {}
message QuestionResponse {
    repeated QuizQuestion questions = 1;
}

message QuizAnswer {
    string question_id = 1;
    string choice_id = 2;
}

message AnswerRequest {
    repeated QuizAnswer answers = 1;
    int32 seconds_taken = 2;
    string username = 3;
}

message AnswerResponse {
    int32 correct_answer_count = 1;
    float user_compared_score = 2;
}

message UserScoreRequest {
    string username = 1;
}

message UserScoreResponse {
    float user_compared_score = 1;
}